Fix SysTray focus rect position

BUG=672723
TEST=On login, lock, and desktop screens, with and without
--ash-md=disabled flag, move focus to SysTray, and verify that focus
rect is in correct position.

Review-Url: https://codereview.chromium.org/2569773002
Cr-Commit-Position: refs/heads/master@{#440476}

Former-commit-id: ed39f2cb627cd5deb00a0d5f1fea0cddd48c8cc4