ash/common/system/tray/tray_background_view.h
@@ -142,7 +142,6 @@ class ASH_EXPORT TrayBackgroundView : public ActionableView,
   bool PerformAction(const ui::Event& event) override;
   void HandlePerformActionResult(bool action_performed,
                                  const ui::Event& event) override;
-  gfx::Rect GetFocusBounds() override;
   void OnPaintFocus(gfx::Canvas* canvas) override;
 
  private:
